tests/docs/readme/expected
1/1: Building README (README.md)
Error: Unsolved holes:
README.Unsolved.{n:874} introduced at: 
README:38:5--38:17
 34 | unXm : X n -> Nat
 35 | unXm $ MkX m = m
 36 | 
 37 | v : Nat
 38 | v = unXm $ MkX 5
          ^^^^^^^^^^^^

